--- a/templates/about.html
+++ b/templates/about.html
@@ -1,14 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    {% if title %}
-       <title>Blog - {{title}}</title>
-    {% else %}
-       <title>Blog</title>
-    {% endif %}
-</head>
-<body>
-    <h1>About Page</h1>
-</body>
-</html>
+{% extends "layout.html" %}
+
+{% block content %}
+    <h1>ABOUT SECTION</h1>
+{% endblock content %}
