--- a/templates/home.html
+++ b/templates/home.html
@@ -1,18 +1,9 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="UTF-8">
-    {% if title %}
-       <title>Blog - {{title}}</title>
-    {% else %}
-       <title>Blog</title>
-    {% endif %}
-</head>
-<body>
+{% extends "layout.html" %}
+
+{% block content %}
     {% for post in posts %}
        <h1>{{post.title}}</h1>
        <p>By {{post.author}} on {{post.date}}</p>
        <p>{{post.content}}</p>
     {% endfor %}
-</body>
-</html>
+{% endblock content %}
