--- a/templates/home.html
+++ b/templates/home.html
@@ -2,8 +2,17 @@
 
 {% block content %}
     {% for post in posts %}
-       <h1>{{post.title}}</h1>
-       <p>By {{post.author}} on {{post.date}}</p>
-       <p>{{post.content}}</p>
+       <!-- new section added instead of normal display from article.html -->
+       <article class="media content-section">
+          <div class="media-body">
+            <div class="article-metadata">
+              <a class="mr-2" href="#">{{ post.author }}</a>
+              <small class="text-muted">{{ post.date }}</small>
+            </div>
+            <h2><a class="article-title" href="#">{{ post.title }}</a></h2>
+            <p class="article-content">{{ post.content }}</p>
+          </div>
+       </article>
+       <!-- adding article section done -->
     {% endfor %}
 {% endblock content %}
