--- a/main/templates/register.html
+++ b/main/templates/register.html
@@ -68,7 +68,7 @@
             </div>
         </form>
     </div>
-    <div class="form-group">
+    <div class="border-top pt-3">
         <small class="'text-muted">
             Already Have An Account ? <a class="ml-2" href="{{ url_for('login') }}">Sign In</a>
         </small>
