post section added part1

--- a/main/templates/login.html
+++ b/main/templates/login.html
@@ -52,7 +52,7 @@
             </small>
         </form>
     </div>
-    <div class="form-group">
+    <div class="border-top pt-3">
         <small class="'text-muted">
             Don't Have An Account ? <a class="ml-2" href="{{ url_for('register') }}">Register Here!</a>
         </small>
