--- a/main/templates/user_post.html
+++ b/main/templates/user_post.html
@@ -1,6 +1,7 @@
 {% extends "layout.html" %}
 
 {% block content %}
+    <h1 class="mb-3">Post by {{user.username}} ({{ posts.total }})</h1>
     {% for post in posts.items %}
        <!-- new section added instead of normal display from article.html -->
        <article class="media content-section">
@@ -19,9 +20,9 @@
     {% for page_num in posts.iter_pages(left_edge=1, right_edge=1, left_current=1, right_current=2) %} <!-- right considers present + right so 2 passed -->
         {% if page_num %}
           {% if posts.page == page_num %}
-             <a class="btn btn-info mb-4" href="{{ url_for('home', page=page_num) }}">{{ page_num }}</a>
+             <a class="btn btn-info mb-4" href="{{ url_for('user_post', username=user.username, page=page_num) }}">{{ page_num }}</a>
           {% else %}
-             <a class="btn btn-outline-info mb-4" href="{{ url_for('home', page=page_num) }}">{{ page_num }}</a>
+             <a class="btn btn-outline-info mb-4" href="{{ url_for('user_post', username=user.username, page=page_num) }}">{{ page_num }}</a>
           {% endif %}
         {% else %}
             ...
